# wgfont

./: .gitignore  Cargo.toml  README.md
.github/workflows/: minimal-version-check.yaml
examples/: cpu_debug_rendering.rs  cpu_text_rendering.rs  debug_image.rs  example_common.rs  hard_wrap_test.rs  renderer_benchmark.rs  wgpu_text_rendering.rs
src/: font_data.rs  font_storage.rs  font_system.rs  glyph_id.rs  lib.rs  renderer.rs  text.rs
src/renderer/: cpu_debug_renderer.rs  cpu_renderer.rs  debug_renderer.rs  gpu_renderer.rs  wgpu_renderer.rs  wgpu_renderer_standalone.wgsl
src/renderer/cpu_renderer/: glyph_cache.rs  render.rs  vec_cache.rs
src/renderer/gpu_renderer/: glyph_cache.rs
src/renderer/wgpu_renderer/: wgpu_renderer_shader.wgsl
src/text/: data.rs  layout.rs
