[package]
name = "suzuri"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Text rendering library"
repository = "https://github.com/helgev-traP/Suzuri"
documentation = "https://docs.rs/Suzuri"
readme = "README.md"
keywords = ["text", "rendering", "font", "graphics"]
categories = ["gui", "graphics", "text-processing"]

include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
euclid = "^0.22.0"
fontdb = "^0.23.0"
fontdue = "^0.9.0"
fxhash = "^0.2.1"
log = "^0.4.21"
parking_lot = "^0.12.3"
nalgebra = { version = "^0.34.0", optional = true }
wgpu = { version = "^27.0.0", optional = true }
bytemuck = { version = "^1.22.0", features = ["derive"], optional = true }
palette = { version = "^0.7.0", features = ["bytemuck"], optional = true }

[features]
wgpu = ["dep:wgpu", "dep:nalgebra", "dep:bytemuck", "dep:palette"]

[dev-dependencies]
image = "^0.25.0"
pollster = "^0.4.0"
wgpu = "^27.0.0"

[[example]]
name = "wgpu_text_rendering"
required-features = ["wgpu"]

[[example]]
name = "renderer_benchmark"
required-features = ["wgpu"]

[lints.clippy]
unwrap-used = "warn"
too-many-arguments = "allow"
